app/stylesheets/ide.sass
@import constants
@import util
@import partials/base

$nav_left: 220px

#fullscreen
  #run
    +border-right-radius(0)

    margin-right: 0

  #publish
    +border-left-radius(0)

    margin-left: 0

  nav.left
    +border-radius
    +box-sizing(border-box)

    background-color: $dark_highlight
    padding: 10px
    width: $nav_left

    &.light
      background-color: $light_highlight

  section
    padding-left: $nav_left + 20px

  .treeview ul
    background-color: transparent

  .treeview .hover
    color: $pixie_primary

ul.filetree
  +bounds(100%)

  display: inline-block
  margin: 1em
  overflow-x: hidden
  vertical-align: top

  .tab_data
    display: none

  span
    cursor: pointer

    &.folder, &.file
      padding: 1px 0px 1px 18px

    &.folder
      &.resources
        background-image: url(/images/icons/images.png)
      &.sprites
        background-image: url(/images/icons/pictures.png)
      &.sounds
        background-image: url(/images/icons/sound.png)

    &.load_sprite
      background-image: url(/images/icons/picture_go.png)

    &.new_sprite
      background-image: url(/images/icons/picture_add.png)

    &.import_sprites
      background-image: url(/images/icons/image_add.png)

    &.import_sounds
      background-image: url(/images/icons/sound_add.png)

    &.file
      white-space: nowrap
      &.coffeescript
        background-image: url(/images/icons/cup.png)
      &.javascript
        background-image: url(/images/icons/script.png)
      &.sprite
        background-image: url(/images/icons/picture.png)
        margin: 0
      &.sound
        background-image: url(/images/icons/sound.png)
        margin: 0
      &.documentation
        background-image: url(/images/icons/book_open.png)
      &.new_script
        background-image: url(/images/icons/cup_add.png)
      &.add_library
        background-image: url(/images/icons/book_add.png)

#tabs
  +bounds(99%, 100%)

  display: inline-block
  vertical-align: top

  &.ui-tabs
    .ui-tabs-hide
      display: none

    .ui-tabs-panel
      padding: 0
      position: relative
      button.save, button.new_save
        position: absolute
        right: 1.5em
        top: 0.5em

  li
    .ui-icon-close
      float: right
      margin: 0.5em 0.2em 0 0
      cursor: pointer

    &.ui-state-default
      cursor: pointer

      a
        cursor: pointer

      &.ui-state-active
        cursor: default

        a
          cursor: default

    .ui-icon

      &.lang
        float: left
        margin: 0.5em 0 0 0.2em

        &.coffeescript
          background-image: url(/images/icons/cup.png)
        &.javascript
          background-image: url(/images/icons/script.png)
        &.sound
          background-image: url(/images/icons/sound.png)
        &.sprite
          background-image: url(/images/icons/photo.png)
        &.documentation
          background-image: url(/images/icons/book.png)

    a
      font-weight: normal
      padding: 0.5em 0.6em

    &.unsaved
      a
        font-weight: bold
        &:after
          content: "*"

#titleModal, #libraries
  display: none

#testZone
  background-color: #EEE
  display: none
  margin-top: 1em
  padding: 0.5em
  position: absolute

  h3
    cursor: move
    padding-left: 5px

#testFrame
  background-color: #EEE
  border: 1px solid black

#close_app
  float: right
  position: relative
  left: -5px
  top: 6px

.container
  padding-left: 0

.actions
  display: inline-block
  text-align: center

  a
    color: $pixie_primary

#content
  border: none
  padding: 20px 0px 0px 1em
  width: 1280px

#logo
  height: 70px
  position: relative

  #logo_type
    bottom: 0
    color: !main_color
    font-size: 32px
    height: 40px
    letter-spacing: .25em
    position: absolute
    text-align: center
    width: 260px
    a
      font-weight: normal
      text-decoration: none
      &:visited
        color: inherit



ul#libraries
  background-color: #FFF
  border: 1px solid #666
  margin-top: -1px
  position: absolute
  width: 200px
  z-index: 10

  li
    padding-left: 5px
    &:hover
      background-color: #666
      color: #FFF

    label
      font-weight: normal

    input[type="checkbox"]
      display: inline-block
      color: #666
      margin: 0
      padding: 0
      position: relative
      vertical-align: top

